# dbt-metabase

./: .envrc  .gitignore  CONTRIBUTING.md  DATABASE_COMPATIBILITY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.rst  dbt_project.yml  pyproject.toml  requirements-dev.txt  requirements-extra.txt  requirements-test.txt  requirements.txt  setup.py  widget_types.json
.devcontainer/: devcontainer.json  docker-compose.yml
.github/: FUNDING.yml
.github/workflows/: codeql-analysis.yml  lock_threads.yml  main.yml  master.yml  pull_request.yml  test.yml  validate.yml
dbtmetabase/: __init__.py  __main__.py  _cards.py  _exposures.py  _format.py  _lockfile.py  _models.py  cli.py  core.py  core_exposures.py  core_models.py  dbt.py  errors.py  format.py  interface.py  manifest.py  metabase.py  utils.py
dbtmetabase/logger/: logging.py
dbtmetabase/models/: config.py  exceptions.py  interface.py  metabase.py
dbtmetabase/parsers/: dbt.py  dbt_folder.py  dbt_manifest.py  metrics.py
macros/: tests.sql
sandbox/: .env  .gitignore  Dockerfile  Dockerfile-metabase  Dockerfile.metabase  README.md  config.yml  dbt_project.yml  docker-compose.yml  entrypoint.py  profiles.yml  requirements.txt
sandbox/.dbt-metabase/: config.yml
sandbox/databricks-initdb/: init.sql
sandbox/fixtures/metabase.db/: metabase.db.mv.db
sandbox/metabase/: metabase.db.mv.db
sandbox/metabase.db/: metabase.db.mv.db
sandbox/models/: .gitignore  birds.sql  payments.sql  schema.yml
sandbox/models/metabase_queries/: test_query.sql
sandbox/models/staging/: schema.yml  stg_orders.sql
sandbox/postgres-initdb/: init.sql
tests/: __init__.py  _common.py  _core.py  _mocks.py  conftest.py  dbt_project.yml  test_core_exposures.py  test_core_models.py  test_database_schema_table_format.py  test_dbt.py  test_dbt_folder_reader.py  test_dbt_manifest_reader.py  test_dbt_parsers.py  test_dummy.py  test_exposures.py  test_format.py  test_manifest.py  test_metabase.py  test_models.py  utils_mb_test_suite.py
tests/fixtures/: manifest-v11-disabled.json  manifest-v11.json  manifest-v12.json  manifest-v2.json  test_dump_yaml.yml
tests/fixtures/api/: card.json  collection.json  dashboard.json  database.json  table.json  user.json
tests/fixtures/api/card/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  23.json  24.json  27.json  28.json  29.json  3.json  30.json  31.json  32.json  33.json  34.json  37.json  38.json  4.json  5.json  6.json  7.json  8.json  9.json
tests/fixtures/api/collection/: 1.json  2.json  3.json
tests/fixtures/api/collection/2/: items.json
tests/fixtures/api/collection/3/: items.json
tests/fixtures/api/collection/root/: items.json
tests/fixtures/api/dashboard/: 1.json  2.json
tests/fixtures/api/database/: 2.json
tests/fixtures/api/database/2/: metadata.json
tests/fixtures/api/field/: 37.json  38.json  39.json  40.json  41.json  42.json  43.json  44.json  45.json  46.json  47.json  48.json  49.json  50.json  51.json  52.json  53.json  54.json  55.json  56.json  57.json  58.json  59.json  60.json  61.json  62.json  63.json  64.json  65.json  66.json  67.json  68.json  69.json  70.json  71.json  72.json  73.json  74.json
tests/fixtures/api/table/: 10.json  11.json  12.json  5.json  6.json  7.json  8.json  9.json
tests/fixtures/api/user/: 1.json
tests/fixtures/dbt/: manifest.json
tests/fixtures/exposure/: .gitignore  baseline_test_exposures.yml
tests/fixtures/exposure/collection/: a_look_at_your_customers_table.yml  our_analytics.yml  коллекция.yml
tests/fixtures/exposure/default/: exposures.yml
tests/fixtures/exposure/type/card/: 1.yml  10.yml  11.yml  12.yml  13.yml  14.yml  (+20 more)
tests/fixtures/lookups/: field_lookups.json  table_lookups.json
tests/fixtures/mbql4/api/: collection.json
tests/fixtures/mbql5/api/: collection.json  database.json  table.json
tests/fixtures/metric/models/: schema.yml
tests/fixtures/mock_api/: card.json  dashboard.json
tests/fixtures/mock_api/api/: card.json  collection.json  dashboard.json  database.json  table.json  user.json
tests/fixtures/mock_api/card/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
tests/fixtures/mock_api/dashboard/: 1.json
tests/fixtures/mock_api/field/: 39.json  60.json  65.json  70.json  73.json
tests/fixtures/mock_api/table/: 12.json  9.json
tests/fixtures/sample_project/: .gitignore  README.md  dbt_project.yml
tests/fixtures/sample_project/models/: customers.sql  schema.yml
tests/models/: orders.sql
(+97 files in other folders)
