[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=60", "setuptools-scm"]

[tool.setuptools_scm]
version_file = "dbtmetabase/_version.py"

[tool.mypy]
check_untyped_defs = true
ignore_missing_imports = true
python_version = "3.8"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "A",  # flake8-builtins
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501", # line-too-long 
    "F403", # undefined-local-with-import-star
]
