[build-system]
requires = ["setuptools~=75.3.0", "setuptools-scm~=8.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dbt-metabase"
description = "dbt + Metabase integration."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=5.4.1",
    "requests>=2.26.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]
dynamic = ["version"]
license = { text = "MIT License" }
authors = [{ name = "Mike Gouline" }]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.2.0",
    "ruff>=0.14.5",
    "pyright>=1.1.407",
    "pytest>=9.0.1",
    "molot~=1.0.3",
    "dbt-core~=1.11.2",
    "dbt-postgres~=1.10.0",
    "python-dotenv~=1.2.1",
    "types-requests",
    "types-PyYAML",
]

[project.scripts]
dbt-metabase = "dbtmetabase.__main__:cli"

[project.urls]
Homepage = "https://github.com/gouline/dbt-metabase"

[tool.setuptools]
packages = ["dbtmetabase"]

[tool.setuptools_scm]
version_file = "dbtmetabase/_version.py"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "A",      # flake8-builtins
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "FIX001", # flake8-fixme
    "UP",     # pyupgrade
]
ignore = [
    "E501", # line-too-long
    "F403", # undefined-local-with-import-star
]
